reduced pmd count
SVN-Revision: 24118